--- a/main.css
+++ b/main.css
@@ -4,6 +4,14 @@ body{
     padding-top: 20px;
     margin: 0;
 }
+a{
+    color:#428bca;
+    font-weight: none;
+    font-size: 14px;
+}
+.search{
+    text-align: center;
+}
 .phones{ 
  	list-style-type: none;
  	margin-top: 0;
@@ -15,8 +23,7 @@ body{
     height: 110px;
     margin-bottom: 20px;
     padding-top: 15px;
-    padding-right: 15px;
-    padding-left: 15px;   
+    padding-left: 5px;   
     max-width: 80%;
  } 
  .mob-image{ 
@@ -26,19 +33,16 @@ body{
     position: absolute;
 } 
 .mob-name{ 
- 	font-weight: none;
-	font-size: 15px;
 	text-decoration: none;
  	text-align: left;
  	position: relative;
  	top:-4px;
  	bottom: 10px;
  	right:-110px;
- 	padding-top:10px;
 } 
 .mob-dec{ 
  	font-weight: none;
-	font-size: 15px;
+	font-size: 14px;
  	text-align: left;
  	position: relative;
  	top:-4px;
